rewrite json2tree flow to jackson